@@ -165,6 +165,10 @@ allow_multipage_civilopedia_descriptions = true
 ;   similar-near-destination: Like similar-near-start except the search goes outward from whatever tile the last selected unit was last on.
 unit_cycle_search_criteria = standard
 
+; On the domestic advisor screen, tweaks how the number of turns remaining on each city build are displayed to improve readability. Instead of
+; "(1turn)" or "(7turns)", the game will display "(1 Turn)" or "(7 Turns)"
+reformat_turns_remaining_on_domestic_advisor_screen = true
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
