@@ -9,6 +9,8 @@
 - If any unit types are listed in limit_defensive_retreat_on_water_to_types option, only those will be allowed to defensively retreat on water
 - Any unit types listed in exclude_types_from_units_per_tile_limit will be exempted from the stack limit and not count toward it
 - Option show_armies_performing_defensive_bombard that fixes defensive bombard animations being skipped when the bombarding unit is in an army
+- Improve readability of turns remaining on city builds displayed on the domestic advisor screen
+  - Option named reformat_turns_remaining_on_domestic_advisor_screen
 - aggressively_penalize_bankruptcy now alternates between selling buildings or disbanding units first for bankrupt AI players and every third turn cuts their research spending
 - Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
 - Except nuclear weapons from disallow_useless_bombard_vs_airfields
